Configure Error Prone JVM access in Maven